# refectory_project

./: README.md  Requisitos Sistema de Refeitório.txt
refectory_project/: pyproject.toml
refectory_project/refectory_project/model/: crud_base.py  database.py  testing.py
refectory_project/refectory_project/view/: mainPage.py
