[tool.poetry]
name = "refectory-project"
version = "0.1.0"
description = ""
authors = ["Ruben Lobão <rubenlobao18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.23.2"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
